# Project-4

./: README.md
client/: package-lock.json  package.json
client/public/: index.html
client/src/components/Footer/: Footer.css  Footer.jsx
client/src/components/NavBar/: NavBar.css  NavBar.jsx
client/src/components/SignupForm/: SignupForm.css  SignupForm.jsx
client/src/hooks/: useDebounce.js
client/src/pages/About/: About.css  About.jsx
client/src/pages/AddFood/: AddFood.css  AddFood.jsx
client/src/pages/App/: App.css  index.js
client/src/pages/HomePage/: Homepage.jsx
client/src/pages/Inventory/: Inventory.css  Inventory.jsx
client/src/pages/InventoryEdit/: InventoryEdit.css  InventoryEdit.jsx
client/src/pages/InventorySearch/: InventorySearch.css  InventorySearch.jsx
client/src/pages/InventoryView/: InventoryView.css  InventoryView.jsx
client/src/pages/LoginPage/: LoginPage.css  LoginPage.jsx
client/src/pages/MainHomePage/: MainHomePage.css  MainHomePage.jsx
client/src/pages/SignupPage/: SignupPage.css  SignupPage.jsx
client/src/pages/UnactionedExpiredFoodEdit/: UnactionedExpiredFoodEdit.jsx
client/src/pages/UnactionedExpiredFoodView/: UnactionedExpiredFoodView.css  UnactionedExpiredFoodView.jsx
client/src/utils/: constants.js  foodService.js  tokenService.js  userService.js
server/: Dockerfile  README.md  pyproject.toml
server/foods/: admin.py  authentication.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
server/users/: models.py
server/waste_not/: settings.py  urls.py
(+4 files in other folders)
